--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
         "@emotion/cache": "11.7.1",
         "@emotion/react": "11.7.1",
         "@emotion/styled": "11.6.0",
+        "@fortawesome/fontawesome-svg-core": "^6.2.1",
+        "@fortawesome/free-solid-svg-icons": "^6.2.1",
+        "@fortawesome/react-fontawesome": "^0.2.0",
         "@hookform/resolvers": "2.8.5",
         "@mui/base": "5.0.0-alpha.60",
         "@mui/icons-material": "5.2.4",
